--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.23.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 altair==4.2.0
@@ -21,23 +22,27 @@ chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 cloudpickle==2.2.1
+cmake==3.27.5
 colorama==0.4.4
 commonmark==0.9.1
 cycler==0.11.0
 dataclasses-json==0.5.14
+datasets==2.14.5
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.7
 distlib==0.3.4
 Django==4.1.2
 entrypoints==0.4
 et-xmlfile==1.1.0
+evaluate==0.4.0
 executing==0.8.3
 fastjsonschema==2.15.3
 filelock==3.6.0
 fonttools==4.33.3
 frozenlist==1.4.0
-fsspec==2023.9.0
+fsspec==2023.6.0
 gitdb==4.0.9
 GitPython==3.1.27
 google-api-core==2.7.1
@@ -49,6 +54,7 @@ greenlet==2.0.2
 gym==0.26.2
 gym-notices==0.0.8
 httplib2==0.20.4
+huggingface-hub==0.17.3
 idna==3.3
 importlib-metadata==4.12.0
 ipykernel==6.13.0
@@ -65,10 +71,12 @@ jupyter-console==6.4.3
 jupyter-core==4.9.2
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.0
+keras==2.14.0
 kiwisolver==1.4.3
 langchain==0.0.281
 langsmith==0.0.33
 lightning-utilities==0.9.0
+lit==17.0.1
 littleutils==0.2.2
 llama-index==0.8.20
 MarkupSafe==2.1.1
@@ -78,6 +86,7 @@ matplotlib-inline==0.1.3
 mistune==0.8.4
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 nbclient==0.6.0
 nbconvert==6.5.0
@@ -87,6 +96,17 @@ networkx==3.1
 notebook==6.4.10
 numexpr==2.8.5
 numpy==1.22.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 openai==0.28.0
 openpyxl==3.0.9
 outdated==0.2.2
@@ -97,6 +117,7 @@ pandoc==2.2
 pandocfilters==1.5.0
 parso==0.8.3
 patsy==0.5.3
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
 pingouin==0.5.3
@@ -111,6 +132,7 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 protobuf==3.20.0
 psutil==5.9.0
+ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==9.0.0
 pyasn1==0.4.8
@@ -138,9 +160,11 @@ qtconsole==5.3.0
 QtPy==2.0.1
 regex==2023.8.8
 requests==2.27.1
+responses==0.18.0
 rich==12.5.1
 rise==5.7.1
 rsa==4.8
+safetensors==0.3.3
 scikit-learn==1.3.0
 scipy==1.9.3
 seaborn==0.12.2
@@ -162,6 +186,7 @@ terminado==0.13.3
 threadpoolctl==3.2.0
 tiktoken==0.4.0
 tinycss2==1.1.1
+tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
 torch==2.0.1
@@ -170,6 +195,8 @@ torchmetrics==1.1.2
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
+transformers==4.33.2
+triton==2.0.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 tzdata==2022.2
@@ -186,6 +213,7 @@ websockets==10.3
 whitenoise==5.3.0
 widgetsnbextension==3.6.0
 xarray==2023.8.0
+xxhash==3.3.0
 yarl==1.9.2
 zipp==3.8.1
 zope.event==4.5.0
